# rl_trader

./: .gitignore  README.md  pyproject.toml
dataset/: README.md
experiments/: verify_oi_freshness.py
rl_trader/: __init__.py  configs.py
rl_trader/algorithms/: __init__.py  _rollout.py  ppo.py
rl_trader/architectures/: __init__.py  base.py  factored_attention.py
rl_trader/envs/: __init__.py  _common.py  multi_asset.py
rl_trader/eval/: __init__.py  metrics.py  rollout.py  validation.py
rl_trader/features/: __init__.py  pipeline.py
scripts/: build_features.py  eval.py  train.py
